# openxr-3d-display

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .mailmap  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CompilerFlags.cmake  GET-STARTED.md  HANDOFF_234.md  README.md  UPSTREAM_SYNC.md  app-control.md  build.gradle  flake.nix  keyboard-controls.md  status.md
demos/: CMakeLists.txt
demos/3dgs_common/: CMakeLists.standalone.txt  CMakeLists.txt  gs_renderer.cpp  gs_renderer.h  gs_scene_loader.cpp  gs_scene_loader.h  gs_spz_loader.cpp  gs_vulkan_utils.cpp
demos/gaussian_splatting_ext_vk_macos/: CMakeLists.txt  main.mm
demos/gaussian_splatting_ext_vk_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
demos/gaussian_splatting_handle_vk_macos/: CMakeLists.standalone.txt  CMakeLists.top.txt  CMakeLists.txt  README.standalone.md  main.mm
demos/gaussian_splatting_handle_vk_win/: CMakeLists.standalone.txt  CMakeLists.txt  main.cpp  xr_session.cpp
demos/gaussian_splatting_vk/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
demos/gaussian_splatting_vk_macos/: CMakeLists.txt  main.mm
demos/spatial_os/: CMakeLists.txt  main.cpp  panel_render.cpp  resource.rc  xr_session.cpp
demos/spatial_os_hosted_d3d11_win/: main.cpp
demos/spatial_os_rt_d3d11_win/: CMakeLists.txt  main.cpp  panel_render.h  resource.rc  spatial_app.h  spatial_os.manifest  xr_session.cpp  xr_session.h
test_apps/: CMakeLists.txt  EXT_TEST_APPS.md  HANDLE_TEST_APPS.md
test_apps/3dgs_common/: CMakeLists.txt  gs_renderer.cpp  gs_renderer.h  gs_scene_loader.cpp  gs_scene_loader.h  gs_spz_loader.h  gs_vulkan_utils.h
test_apps/common/: CMakeLists.standalone.txt  CMakeLists.txt  atlas_capture.h  atlas_capture_macos.mm  camera3d_view.c  camera3d_view.h  d3d11_renderer.cpp  d3d11_renderer.h  display3d_view.c  display3d_view.h  displayxr_manifest.cmake  hud_renderer.cpp  hud_renderer.h  input_handler.cpp  input_handler.h  leia_math.h  logging.cpp  logging.h  optimus_dgpu_hint.c  stereo_params.h  text_overlay.cpp  text_overlay.h  view_params.h  window_manager.cpp  window_manager.h  xr_session_common.cpp  xr_session_common.h
test_apps/cube_d3d11/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr.manifest
test_apps/cube_d3d12/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr.manifest  xr_session.cpp  xr_session.h
test_apps/cube_ext_d3d11/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_ext_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_ext.manifest  xr_session.cpp
test_apps/cube_ext_d3d12/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_ext_d3d12.manifest  xr_session.cpp
test_apps/cube_ext_d3d12_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_ext_gl/: CMakeLists.txt  gl_renderer.h  main.cpp  resource.rc  xr_session.h
test_apps/cube_ext_gl_macos/: main.mm
test_apps/cube_ext_gl_win/: CMakeLists.txt  gl_renderer.cpp  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_ext_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_ext_vk/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_ext_vk.manifest  vk_renderer.h  xr_session.cpp
test_apps/cube_ext_vk_macos/: CMakeLists.txt  main.mm
test_apps/cube_ext_vk_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_gl/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr.manifest  xr_session.cpp  xr_session.h
test_apps/cube_gl_macos/: CMakeLists.txt
test_apps/cube_handle_d3d11_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_handle_d3d12_win/: CMakeLists.txt  d3d12_renderer.cpp  d3d12_renderer.h  main.cpp  xr_session.cpp
test_apps/cube_handle_gl_macos/: main.mm
test_apps/cube_handle_gl_win/: CMakeLists.txt  gl_functions.h  gl_renderer.cpp  gl_renderer.h  main.cpp  xr_session.cpp
test_apps/cube_handle_metal_macos/: main.mm
test_apps/cube_handle_vk_macos/: main.mm
test_apps/cube_handle_vk_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_hosted_d3d11_win/: CMakeLists.txt  xr_session.cpp
test_apps/cube_hosted_legacy_d3d11_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_hosted_legacy_d3d12_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_hosted_legacy_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_hosted_legacy_gl_win/: CMakeLists.txt  gl_renderer.cpp  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_hosted_legacy_metal_macos/: main.mm
test_apps/cube_hosted_legacy_vk_macos/: CMakeLists.txt  main.cpp
test_apps/cube_hosted_legacy_vk_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_ipc_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_ipc_legacy_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_rt_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_rt_d3d12_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_rt_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_rt_gl_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_rt_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_rt_vk_macos/: CMakeLists.txt  main.cpp
test_apps/cube_rt_vk_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_shared_d3d11/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_shared.manifest  xr_session.h
test_apps/cube_shared_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_shared_d3d12/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_shared.manifest  xr_session.h
test_apps/cube_shared_d3d12_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_shared_gl/: CMakeLists.txt  main.cpp  resource.rc
test_apps/cube_shared_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_shared_gl_win/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_shared_gl.manifest  (+2 more)
(+973 files in other folders)
